--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "food_order",
   "version": "1.0.0",
-  "description": "Full stack vue and express and mysql",
+  "description": "Full stack vue , express and mysql",
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
